# graphics

./: .gitignore  main.cpp
assets/: simple-shader.fs  simple-shader.vs
hw1/: imgui.ini  main.cpp
hw1/assets/: simple-shader.fs  simple-shader.vs
hw2/: CMakeLists.txt  README.md  build.sh  run.bat  run.sh
hw2/assets/: id.vs  object.fs  object.vs  skybox.fs  skybox.vs
hw2/src/: glconfig.cpp  glconfig.h  main.cpp
hw3/: CMakeLists.txt  README.md  conanfile.txt
hw3/.gitold/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
hw3/.gitold/logs/: HEAD
hw3/.gitold/logs/refs/heads/: hw2  master
hw3/.gitold/logs/refs/remotes/origin/: HEAD  master
hw3/.gitold/refs/heads/: hw2
hw3/.gitold/refs/remotes/origin/: master
hw3/assets/: id.fs  landscape_gen.vs  light.fs  moon.fs  object.fs  object.vs  skybox.fs
hw3/src/: glconfig.cpp  glconfig.h  main.cpp  movement.cpp  movement.h
hw4/: .gitignore  CMakeLists.txt  README.md
hw4/assets/: droplets.fs  droplets.gm  droplets.gs  droplets.vs  light.fs  object.fs  object.vs
hw4/assets/black_smith/: black_smith.mtl
hw4/src/: droplet.cpp  droplet.h  glconfig.cpp  glconfig.h  main.cpp  opengl_shader.cpp  opengl_shader.h
